# butterfly

./: .buildinfo  .dir-locals.el  .gitignore  .gitmodules  .projectile  LICENSE.txt  Makefile  Project.ede  README.md  STYLE.md  TODO.md  bessel.c  bessel.h  bf_all_blocks.c  bf_one_block.c  blas.h  block_mat.c  block_mat.h  build_quadtree.c  butterfly.c  cheb.c  cheb.h  const.h  def.h  dtype.c  dtype.h  error.c  error.h  error_macros.h  examples.html  fac.c  fac.h  fly.c  genindex.html  geom.c  geom.h  gtags.conf  helm2.c  helm2.h  hierarchical-matrices.html  (+53 more)
.doctrees/: environment.pickle  examples.doctree  hierarchical-matrices.doctree  implementation.doctree  index.doctree  installation.doctree  introduction.doctree  quickstart.doctree  todo.doctree  wrappers.doctree
.github/workflows/: documentation.yml
_sources/: todo.rst.txt  wrappers.rst.txt
docs/: Doxyfile  conf.py  hierarchical-matrices.rst  implementation.rst  index.rst  installation.rst
examples/: README.md  bf_all_blocks.c  bf_lbo.c  bf_one_block.c  butterfly_lbo.c  collect_multiple_scattering_data.py  convert_raw_multiple_scattering_data_to_csv.py  curve_sampling.py  ellipse.py  helm2_bie.c  helm2_bie_ellipse_kapur_rokhlin.c  make_circle_test_data.py  make_ellipse_test_data.py  make_hankel_evaluator_plots.py  make_multiple_scattering_plots.py  make_test_data.py  meson.build  multiple_scattering.c  multiple_scattering_context.c  multiple_scattering_context.h  multiple_scattering_opts.h  plot_bf_all_blocks.py  plot_bf_one_block.py  plot_blocks.py  plot_lifted_blocks.py  plot_mesh_and_octree.py  py_gmres_test.py  random_ellipses.py  run_bf_all_blocks_test.sh  run_bf_lbo_test.sh  run_bf_one_block_test.sh  test.lua  test_hankel_evaluator.c  test_helm2_adapt_fac.c  test_lifting.py
examples/covariance/: Project.toml  cheb_cov.c  exact_cov_test.sh  fast_cov_test.sh  generate_meshes.sh  lbo_cov.c  lbo_cov_from_file.c  lbo_cov_test.sh  mesh_sphere.jl  meson.build  plot_exact_cov_test.jl  plot_fast_cov_test.jl  plot_sample.jl  plot_test_output.jl  plot_truncation_error.jl  read_FEM_matrices.jl  run_lbo_cov.sh  save_FEM_matrices.c  smooth_cov_test.sh  utils.jl
examples/fast_direct_solver/: fast_direct_solver.c  fast_direct_solver.py  meson.build
examples/fiedler_tree/: meson.build  test_fiedler_tree.c
examples/lbo/: README.md  bf_lbo.c  bf_lbo_plot_blocks.py  cheb_cov.c  collect_lbo_data.py  lbo.c  lbo.h  lbo_cov.c  meson.build  run_bf_lbo_test.sh
examples/lbo_MFEM/: lbo_MFEM.cpp  make_plots.py  meson.build
examples/multiple_scattering/: README.md  collect_multiple_scattering_data.py  convert_raw_multiple_scattering_data_to_csv.py  make_multiple_scattering_plots.py  meson.build  multiple_scattering.c  multiple_scattering_context.c  multiple_scattering_context.h  multiple_scattering_opts.c  multiple_scattering_opts.h
examples/radiosity/: meson.build  radiosity.c  radiosity.py
examples/simple/: README.md  bf_all_blocks.c  bf_one_block.c  helm2_bie.c  meson.build  plot_bf_all_blocks.py  plot_bf_one_block.py  plot_blocks.py  plot_points_and_quadtree.py  run_bf_all_blocks_test.sh  run_helm2_bie_test.sh
examples/sphere_covariance/: Manifest.toml  covariance_sphere.jl  lbo_cov.c  meson.build  read_FEM_matrices.jl  run_lbo_cov.sh  save_FEM_matrices.c  sphere_cov.jl
examples/tree_evaluator/: make_hankel_evaluator_plots.py  meson.build  simple_evaluator.py  test_hankel_evaluator.c
include/bf/: array.h  assert.h  backends.h  bbox.h  bessel.h  bf.h  bf_streaming.h  blas.h  cheb.h  chol.h  chol_csr_real.h  cholmod.h  circle.h  const.h  def.h  disjoint_interval_list.h  dtype.h  eig.h  ellipse.h  error.h  error_macros.h  eval_tree.h  fac.h  fac_helm2.h  fac_span.h  fac_streamer.h  fiedler_tree.h  fiedler_tree_node.h  geom.h  helm2.h  indexed_mat.h  interface.h  interval.h  interval_tree.h  interval_tree_node.h  layer_pot.h  lbo.h  linalg.h  logging.h  lu.h  (+61 more)
src/: array.c  bbox.c  bessel.c  bf.c  butterfly.c  cheb.c  chol.c  chol_csr_real.c  cholmod.c  circle.c  disjoint_interval_list.c  dtype.c  ellipse.c  error.c  eval_tree.c  fac.c  fac_helm2.c  fac_span.c  fac_streamer.c  fiedler_tree.c  fiedler_tree_node.c  geom.c  helm2.c  indexed_mat.c  interval.c  interval_tree.c  interval_tree_node.c  lbo.c  linalg.c  logging.c  lu.c  lu_csr_real.c  lu_dense_complex.c  macros.h  mat.c  mat_block.c  mat_block_coo.c  mat_block_dense.c  mat_block_diag.c  mat_coo_complex.c  (+57 more)
subprojects/: argtable3.wrap
tests/: cmocka_setup.h  generate_data_for_test_linalg.py  meson.build  sphere_Lam.txt  sphere_Phi.txt  test_disjoint_interval_list.c  test_interval.c  test_linalg.c
wrappers/: meson.build
wrappers/python/: README.md  bbox.pxd  bf.pxd  butterfly.pyx  defs.pxd  ellipse.pxd  fac.pxd  fac_helm2.pxd  fac_streamer.pxd  geom.pxd  helm2.pxd  indexed_mat.pxd  layer_pot.pxd  linalg.pxd  mat.pxd  mat_block_coo.pxd  mat_block_dense.pxd  mat_block_diag.pxd  mat_csr_real.pxd  mat_dense_complex.pxd  mat_dense_real.pxd  mat_diag_real.pxd  mat_diff.pxd  mat_func.pxd  mat_identity.pxd  mat_product.pxd  mat_python.pxd  meson.build  node_span.pxd  perm.pxd  points.c  points.pxd  ptr_array.pxd  quadtree.pxd  quadtree_node.pxd  radiosity.pxd  rand.pxd  real_array.pxd  size_array.pxd  tree.pxd  (+7 more)
