option(
  'embree',
  type : 'feature',
  value : 'enabled',
  description : 'Compile features and examples using Embree')

option(
  'python',
  type : 'feature',
  value : 'enabled',
  description : 'Build butterfly\'s Python wrapper')

option(
  'mfem',
  type : 'feature',
  value : 'enabled',
  description : 'Compile features and examples using MFEM')
